--- a/frontend/src/styles/profile.scss
+++ b/frontend/src/styles/profile.scss
@@ -300,12 +300,44 @@
 
 
     a {
+        text-align: center;
         font-size: .9rem;
         text-decoration: none;
         color: #000;
         padding: 10px;
         margin: 10px;
         width: 160px;
+        border: none;
+        border-radius: 5px;
+        background-color: #fff;
+        box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+        transition: all 0.3s ease-in-out;
+        cursor: pointer;
+
+        &:hover {
+            transform: scale(1.05);
+            background-color: var(--color-secondary);
+        }
+
+    }
+}
+
+.profile_activer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 200px;
+    width: 300px;
+
+    button {
+        text-align: center;
+        font-size: 1.3rem;
+        text-decoration: none;
+        color: #000;
+        padding: 10px;
+        margin: 10px;
+        width: 170px;
         border: none;
         border-radius: 5px;
         background-color: #fff;
