--- a/frontend/src/styles/contact.scss
+++ b/frontend/src/styles/contact.scss
@@ -25,6 +25,7 @@
         text-shadow: 0 0 10px #000000;
         width: 20%;
         height: 5%;
+        margin-top: -2%;
         text-align: center;
     }
 }
