--- a/frontend/src/styles/profile.scss
+++ b/frontend/src/styles/profile.scss
@@ -5,6 +5,7 @@
     align-items: center;
     justify-content: center;
 
+    .profile-section-password,
     .profile-section {
         border: #000000 2px solid;
         border-radius: 5px;
@@ -286,7 +287,9 @@
     }
 }
 
-.profile_valider {
+.profile_valider,
+.profile_activer,
+.profile_valider-password {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -299,6 +302,7 @@
     }
 
 
+    button,
     a {
         text-align: center;
         font-size: .9rem;
@@ -322,36 +326,15 @@
     }
 }
 
-.profile_activer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 200px;
-    width: 300px;
+.profile-section-password1 {
 
+    input,
     button {
-        text-align: center;
-        font-size: 1.3rem;
-        text-decoration: none;
-        color: #000;
-        padding: 10px;
-        margin: 10px;
-        width: 170px;
-        border: none;
-        border-radius: 5px;
-        background-color: #fff;
-        box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-        transition: all 0.3s ease-in-out;
-        cursor: pointer;
-
-        &:hover {
-            transform: scale(1.05);
-            background-color: var(--color-secondary);
-        }
-
+        width: 100%;
+        max-width: 470px;
     }
 }
+
 
 @media (max-height: 420px) {
     .profile-page {
