systeme envoie email fini il faudra juste reparer mail trap ou juste passer au chose serieuse

--- a/frontend/src/styles/contact.scss
+++ b/frontend/src/styles/contact.scss
@@ -179,7 +179,7 @@
     animation: opacity 2s ease-in-out;
 }
 
-.popup {
+.popup, .maxMailPopup {
     opacity: 0;
     display: none;
     position: fixed;
