--- a/frontend/src/styles/ForgetPassword.scss
+++ b/frontend/src/styles/ForgetPassword.scss
@@ -9,7 +9,7 @@
         width: 100%;
         max-width: 400px;
         padding: 20px;
-        border: 2px solid #000;
+        border: 2px solid var(--color-black);
         border-radius: 5px;
         background-color: #0000002a;
         display: flex;
@@ -27,7 +27,7 @@
             width:  100%;
             border: none;
             border-radius: 5px;
-            background-color: #fff;
+            background-color: var(--color-white);
             box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
             transition: all 0.3s ease-in-out;
             margin-bottom: 20px;
@@ -43,7 +43,7 @@
             width: 100%;
             border: none;
             border-radius: 5px;
-            background-color: #fff;
+            background-color: var(--color-white);
             box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
             cursor: pointer;
             transition: all 0.3s ease-in-out;
@@ -64,13 +64,13 @@
     width: 50%;
     border: none;
     border-radius: 5px;
-    background-color: #fff;
+    background-color: var(--color-white);
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
     cursor: pointer;
     transition: all 0.3s ease-in-out;
 
     &:hover {
         transform: scale(1.03);
-        color: #000;
+        color: var(--color-black);
     }
 }
