--- a/frontend/src/styles/Page_404.scss
+++ b/frontend/src/styles/Page_404.scss
@@ -36,7 +36,7 @@
             p {
                 font-size: 25px;
                 font-weight: bold;
-                color: #fff;
+                color: var(--color-white);
                 text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
             }
         }
@@ -45,7 +45,7 @@
             width: 5%;
             background-color: var(--color-error);
             height: 5px;
-            border: 1px solid #000;
+            border: 1px solid var(--color-black);
         }
 
 
