--- a/frontend/src/styles/Nos_chants.scss
+++ b/frontend/src/styles/Nos_chants.scss
@@ -17,7 +17,7 @@
 
         .first-section-chant-title {
             font-size: 2rem;
-            color: #fff;
+            color: var(--color-white);
             text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
             animation: opacity 3s ease-in-out;
         }
@@ -36,7 +36,7 @@
                 justify-content: center;
                 flex-direction: column;
                 margin: 4px;
-                border: 2px solid #000;
+                border: 2px solid var(--color-black);
                 text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
                 justify-content: space-evenly;
                 transition: transform 0.3s ease-in-out;
@@ -70,8 +70,8 @@
 
                 a {
                     text-decoration: none;
-                    color: #fff;
-                    text-shadow: -1px 1px 2px #000;
+                    color: var(--color-white);
+                    text-shadow: -1px 1px 2px var(--color-black);
 
                     &:hover {
                         text-decoration: underline;
@@ -80,22 +80,22 @@
 
                 #extraText p {
                     font-size: 13px;
-                    color: #fff;
-                    text-shadow: -1px 1px 2px #000;
+                    color: var(--color-white);
+                    text-shadow: -1px 1px 2px var(--color-black);
                 }
 
                 p {
-                    color: #fff;
+                    color: var(--color-white);
                     margin-top: 5%;
                     font-weight: bold;
-                    text-shadow: -1px 1px 2px #000;
+                    text-shadow: -1px 1px 2px var(--color-black);
                 }
 
                 hr {
                     margin-bottom: 5%;
                     width: 50%;
-                    border: 1px solid #fff;
-                    box-shadow: 0 0 10px #000;
+                    border: 1px solid var(--color-white);
+                    box-shadow: 0 0 10px var(--color-black);
                 }
             }
         }
