--- a/frontend/src/styles/PrivacyPolicy.scss
+++ b/frontend/src/styles/PrivacyPolicy.scss
@@ -11,7 +11,7 @@
     margin: 0 auto;
     background-color: #ffffff2e;
     border-radius: 10px;
-    border: 1px solid #fff;
+    border: 1px solid var(--color-white);
 
     h2 {
       font-size: 2em;
@@ -40,7 +40,7 @@
       p {
         margin-bottom: 1em;
         line-height: 1.5;
-        color: #fff;
+        color: var(--color-white);
         text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
         margin-left: 2em;
         margin-right: 2em;
