--- a/frontend/src/styles/Terms.scss
+++ b/frontend/src/styles/Terms.scss
@@ -16,7 +16,7 @@
         margin: 0 auto;
         background-color: #ffffff2e;
         border-radius: 10px;
-        border: 1px solid #fff;
+        border: 1px solid var(--color-white);
 
         h2 {
             font-weight: bold;
@@ -38,7 +38,7 @@
             margin-right: 20px;
             font-size: 15px;
             width: 500px;
-            color: #fff;
+            color: var(--color-white);
             text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 
         }
