--- a/frontend/src/styles/contact.scss
+++ b/frontend/src/styles/contact.scss
@@ -53,7 +53,7 @@
 
         &:hover {
             background-color: #FFD700;
-            border: 4px solid #000;
+            border: 4px solid var(--color-black);
             transform: scale(1.1);
         }
 
@@ -199,8 +199,8 @@
     button {
         display: inline-block;
         padding: 5px 20px;
-        background-color: #000;
-        color: #fff;
+        background-color: var(--color-black);
+        color: var(--color-white);
         text-decoration: none;
         border-radius: 5px;
         font-weight: bold;
