--- a/frontend/src/styles/profile.scss
+++ b/frontend/src/styles/profile.scss
@@ -27,7 +27,7 @@
                 margin: 10px;
                 width: 150px;
                 border: none;
-                background-color: #fff;
+                background-color: var(--color-white);
                 border: #000000 2px solid;
                 box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
                 transition: all 0.3s ease-in-out;
@@ -53,7 +53,7 @@
             label {
                 margin-left: 10px;
                 text-align: left;
-                color: #fff;
+                color: var(--color-white);
                 text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
             }
 
@@ -65,7 +65,7 @@
                 width: 470px;
                 border: none;
                 border-radius: 5px;
-                background-color: #fff;
+                background-color: var(--color-white);
                 box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
                 transition: all 0.3s ease-in-out;
 
@@ -97,7 +97,7 @@
 
                     label {
                         text-align: left;
-                        color: #fff;
+                        color: var(--color-white);
                         text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
                     }
                 }
@@ -110,7 +110,7 @@
 
                     &:hover {
                         text-decoration: underline;
-                        color: #fff;
+                        color: var(--color-white);
                     }
                 }
             }
@@ -121,7 +121,7 @@
                 width: 470px;
                 border: none;
                 border-radius: 5px;
-                background-color: #fff;
+                background-color: var(--color-white);
                 box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
                 cursor: pointer;
                 transition: all 0.3s ease-in-out;
@@ -143,7 +143,7 @@
 }
 
 .with-a-Account-And-Social {
-    color: #fff;
+    color: var(--color-white);
     text-align: center;
 
     .social-medias {
@@ -184,9 +184,9 @@
 
 
 .verif-email {
-    border: 2px solid #000;
+    border: 2px solid var(--color-black);
     border-radius: 5px;
-    color: #fff;
+    color: var(--color-white);
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     background-color: #0000002a;
     height: 200px;
@@ -214,7 +214,7 @@
             width: 470px;
             border: none;
             border-radius: 5px;
-            background-color: #fff;
+            background-color: var(--color-white);
             box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
             transition: all 0.3s ease-in-out;
             margin-bottom: 20px;
@@ -260,7 +260,7 @@
     a {
         margin-bottom: 10px;
         text-decoration: none;
-        color: #fff;
+        color: var(--color-white);
 
         &:hover {
             text-decoration: underline;
@@ -274,7 +274,7 @@
         width: 150px;
         border: none;
         border-radius: 5px;
-        background-color: #fff;
+        background-color: var(--color-white);
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
         transition: all 0.3s ease-in-out;
         cursor: pointer;
@@ -298,7 +298,7 @@
     width: 300px;
 
     p {
-        color: #fff;
+        color: var(--color-white);
     }
 
 
@@ -307,13 +307,13 @@
         text-align: center;
         font-size: .9rem;
         text-decoration: none;
-        color: #000;
+        color: var(--color-black);
         padding: 10px;
         margin: 10px;
         width: 160px;
         border: none;
         border-radius: 5px;
-        background-color: #fff;
+        background-color: var(--color-white);
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
         transition: all 0.3s ease-in-out;
         cursor: pointer;
